feat: Implement address management in Checkout and Profile pages
- Added AddressForm component for creating and editing addresses.
- Integrated address creation and management in CheckoutPage.
- Enhanced ProfilePage to manage user addresses with create, edit, delete, and set default functionalities.
- Introduced province and ward selection with API integration for address forms.
- Updated user service to handle basic profiles and delivery addresses.
- Migrated existing style profiles to a new basic profile schema in the database.
- Added necessary database migrations for user profiles and delivery addresses.