@@ -1,74 +1,60 @@
 package com.stylemind.user.service;
 
-import com.stylemind.user.dto.DeliveryAddressRequest;
-import com.stylemind.user.dto.DeliveryAddressResponse;
-import com.stylemind.user.dto.StyleProfileRequest;
-import com.stylemind.user.dto.StyleProfileResponse;
-import com.stylemind.user.entity.CustomerStyleProfile;
-import com.stylemind.user.entity.AddressValidationStatus;
-import com.stylemind.user.entity.DeliveryAddress;
-import com.stylemind.user.repository.CustomerStyleProfileRepository;
-import com.stylemind.user.repository.DeliveryAddressRepository;
 import com.stylemind.common.exception.BusinessException;
 import com.stylemind.common.util.StringUtil;
+import com.stylemind.user.dto.DeliveryAddressRequest;
+import com.stylemind.user.dto.DeliveryAddressResponse;
+import com.stylemind.user.dto.UserProfileResponse;
+import com.stylemind.user.entity.AddressValidationStatus;
+import com.stylemind.user.entity.DeliveryAddress;
+import com.stylemind.user.repository.DeliveryAddressRepository;
+import com.stylemind.user.repository.UserProfileRepository;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.ZoneId;
+import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-@Slf4j
 @Transactional
 public class UserProfileService {
 
-    private final CustomerStyleProfileRepository profileRepository;
+    private final UserProfileRepository userProfileRepository;
     private final DeliveryAddressRepository addressRepository;
     private final AdministrativeDataService administrativeDataService;
     private final VietnamesePhoneNumberService phoneNumberService;
 
-    // Style Profile
-    @Transactional
-    public StyleProfileResponse getStyleProfile(String userId) {
-        return mapToStyleProfileResponse(ensureProfile(userId));
+    @Transactional(readOnly = true)
+    public UserProfileResponse getProfile(String userId) {
+        return userProfileRepository.findById(userId)
+                .map(profile -> UserProfileResponse.builder()
+                        .userId(profile.getUserId())
+                        .displayName(profile.getDisplayName())
+                        .build())
+                .orElseGet(() -> UserProfileResponse.builder().userId(userId).build());
     }
 
-    @Transactional
-    public StyleProfileResponse updateStyleProfile(String userId, StyleProfileRequest request) {
-        CustomerStyleProfile profile = ensureProfile(userId);
-
-        profile.setDisplayName(request.getDisplayName());
-        profile.setGender(request.getGender());
-        profile.setAge(request.getAge());
-        profile.setHeightCm(request.getHeightCm());
-        profile.setWeightKg(request.getWeightKg());
-        profile.setBodyMorphology(request.getBodyMorphology());
-        profile.setPreferredFit(request.getPreferredFit());
-        profile.setStylePersonas(request.getStylePersonas());
-
-        profile = profileRepository.save(profile);
-        return mapToStyleProfileResponse(profile);
-    }
-
-    // Delivery Addresses
-    @Transactional
+    @Transactional(readOnly = true)
     public List<DeliveryAddressResponse> getAddresses(String userId) {
-        ensureProfile(userId);
         return addressRepository.findByUserId(userId).stream()
+                .sorted(Comparator.comparing((DeliveryAddress address) -> Boolean.TRUE.equals(address.getIsDefault())).reversed()
+                        .thenComparing(DeliveryAddress::getCreatedAt,
+                                Comparator.nullsLast(Comparator.naturalOrder())))
                 .map(this::mapToAddressResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    @Transactional
     public DeliveryAddressResponse createAddress(String userId, DeliveryAddressRequest request) {
         AdministrativeDataService.AddressAdministrativeSnapshot administrative =
                 administrativeDataService.validateAndResolve(request.getProvinceCode(), request.getWardCode());
         String normalizedPhone = phoneNumberService.normalize(request.getPhoneNumber());
-        if (Boolean.TRUE.equals(request.getIsDefault())) {
-            // Single atomic UPDATE — no race condition
+        addressRepository.lockDefaultAddressSlot(userId);
+        boolean shouldBeDefault = Boolean.TRUE.equals(request.getIsDefault())
+                || addressRepository.findByUserId(userId).isEmpty();
+        if (shouldBeDefault) {
             addressRepository.clearAllDefaultsByUserId(userId);
         }
 
@@ -86,27 +72,22 @@ public class UserProfileService {
                 .shippingNote(request.getShippingNote())
                 .validationStatus(AddressValidationStatus.VALID)
                 .administrativeDataVersion(administrative.dataVersion())
-                .isDefault(Boolean.TRUE.equals(request.getIsDefault()))
+                .isDefault(shouldBeDefault)
                 .build();
 
         return mapToAddressResponse(addressRepository.save(address));
     }
 
     public DeliveryAddressResponse updateAddress(String userId, String addressId, DeliveryAddressRequest request) {
-        DeliveryAddress address = addressRepository.findById(addressId)
-                .orElseThrow(() -> new BusinessException("ADDRESS_NOT_FOUND", "Không tìm thấy địa chỉ", 404));
-
-        if (!address.getUserId().equals(userId)) {
-            throw new BusinessException("ACCESS_DENIED", "Không có quyền truy cập địa chỉ này", 403);
-        }
-
+        DeliveryAddress address = requireOwnedAddress(userId, addressId);
+        addressRepository.lockDefaultAddressSlot(userId);
         AdministrativeDataService.AddressAdministrativeSnapshot administrative =
                 administrativeDataService.validateAndResolve(request.getProvinceCode(), request.getWardCode());
         String normalizedPhone = phoneNumberService.normalize(request.getPhoneNumber());
 
         if (Boolean.TRUE.equals(request.getIsDefault()) && !Boolean.TRUE.equals(address.getIsDefault())) {
-            // Single atomic UPDATE — no race condition
             addressRepository.clearAllDefaultsByUserId(userId);
+            address.setIsDefault(true);
         }
 
         address.setRecipientName(request.getRecipientName());
@@ -120,60 +101,65 @@ public class UserProfileService {
         address.setShippingNote(request.getShippingNote());
         address.setValidationStatus(AddressValidationStatus.VALID);
         address.setAdministrativeDataVersion(administrative.dataVersion());
-        address.setIsDefault(Boolean.TRUE.equals(request.getIsDefault()));
 
         return mapToAddressResponse(addressRepository.save(address));
     }
 
-    public void deleteAddress(String userId, String addressId) {
-        DeliveryAddress address = addressRepository.findById(addressId)
-                .orElseThrow(() -> new BusinessException("ADDRESS_NOT_FOUND", "Không tìm thấy địa chỉ", 404));
-
-        if (!address.getUserId().equals(userId)) {
-            throw new BusinessException("ACCESS_DENIED", "Không có quyền xóa địa chỉ này", 403);
+    public DeliveryAddressResponse setDefaultAddress(String userId, String addressId) {
+        DeliveryAddress address = requireOwnedAddress(userId, addressId);
+        addressRepository.lockDefaultAddressSlot(userId);
+        if (address.getValidationStatus() != AddressValidationStatus.VALID) {
+            throw new BusinessException("SHIPPING_ADDRESS_NOT_VALIDATED",
+                    "Địa chỉ cần được cập nhật trước khi chọn giao hàng", 409);
         }
 
+        addressRepository.clearAllDefaultsByUserId(userId);
+        address.setIsDefault(true);
+        return mapToAddressResponse(addressRepository.save(address));
+    }
+
+    public void deleteAddress(String userId, String addressId) {
+        DeliveryAddress address = requireOwnedAddress(userId, addressId);
+        addressRepository.lockDefaultAddressSlot(userId);
+        DeliveryAddress promotedAddress = Boolean.TRUE.equals(address.getIsDefault())
+                ? addressRepository.findByUserId(userId).stream()
+                        .filter(candidate -> !addressId.equals(candidate.getId()))
+                        .filter(candidate -> candidate.getValidationStatus() == AddressValidationStatus.VALID)
+                        .min(Comparator.comparing(DeliveryAddress::getCreatedAt,
+                                Comparator.nullsLast(Comparator.naturalOrder()))
+                                .thenComparing(DeliveryAddress::getId))
+                        .orElse(null)
+                : null;
+
         addressRepository.delete(address);
+        if (promotedAddress != null) {
+            addressRepository.clearAllDefaultsByUserId(userId);
+            promotedAddress.setIsDefault(true);
+            addressRepository.save(promotedAddress);
+        }
     }
 
     /**
-     * Internal use only — called by InternalUserController for cross-service lookups.
-     * Validates that the address belongs to the given userId before returning.
+     * Internal use only. The caller provides the authenticated order owner;
+     * the returned snapshot is authoritative and safe for Order Service to persist.
      */
     @Transactional(readOnly = true)
     public DeliveryAddressResponse getAddressById(String userId, String addressId) {
-        DeliveryAddress address = addressRepository.findById(addressId)
-                .orElseThrow(() -> new BusinessException("ADDRESS_NOT_FOUND", "Không tìm thấy địa chỉ", 404));
-        if (!address.getUserId().equals(userId)) {
-            throw new BusinessException("ACCESS_DENIED", "Địa chỉ không thuộc người dùng này", 403);
-        }
+        DeliveryAddress address = requireOwnedAddress(userId, addressId);
         if (address.getValidationStatus() != AddressValidationStatus.VALID) {
-            throw new BusinessException("SHIPPING_ADDRESS_NOT_VALIDATED", "Địa chỉ cần được cập nhật trước khi thanh toán", 409);
+            throw new BusinessException("SHIPPING_ADDRESS_NOT_VALIDATED",
+                    "Địa chỉ cần được cập nhật trước khi thanh toán", 409);
         }
         return mapToAddressResponse(address);
     }
 
-    private StyleProfileResponse mapToStyleProfileResponse(CustomerStyleProfile profile) {
-        return StyleProfileResponse.builder()
-                .userId(profile.getUserId())
-                .displayName(profile.getDisplayName())
-                .gender(profile.getGender())
-                .age(profile.getAge())
-                .heightCm(profile.getHeightCm())
-                .weightKg(profile.getWeightKg())
-                .bodyMorphology(profile.getBodyMorphology())
-                .preferredFit(profile.getPreferredFit())
-                .stylePersonas(profile.getStylePersonas())
-                .createdAt(profile.getCreatedAt().atZone(java.time.ZoneId.systemDefault()).toInstant())
-                .updatedAt(profile.getUpdatedAt().atZone(java.time.ZoneId.systemDefault()).toInstant())
-                .build();
-    }
-
-    private CustomerStyleProfile ensureProfile(String userId) {
-        profileRepository.insertProfileShell(userId);
-        return profileRepository.findById(userId)
-                .orElseThrow(() -> new IllegalStateException(
-                        "Profile shell was not available after initialization for user " + userId));
+    private DeliveryAddress requireOwnedAddress(String userId, String addressId) {
+        DeliveryAddress address = addressRepository.findById(addressId)
+                .orElseThrow(() -> new BusinessException("ADDRESS_NOT_FOUND", "Không tìm thấy địa chỉ", 404));
+        if (!userId.equals(address.getUserId())) {
+            throw new BusinessException("ACCESS_DENIED", "Không có quyền truy cập địa chỉ này", 403);
+        }
+        return address;
     }
 
     private DeliveryAddressResponse mapToAddressResponse(DeliveryAddress address) {
@@ -191,9 +177,11 @@ public class UserProfileService {
                 .shippingNote(address.getShippingNote())
                 .validationStatus(address.getValidationStatus())
                 .administrativeDataVersion(address.getAdministrativeDataVersion())
-                .isDefault(address.getIsDefault())
-                .createdAt(address.getCreatedAt().atZone(java.time.ZoneId.systemDefault()).toInstant())
-                .updatedAt(address.getUpdatedAt().atZone(java.time.ZoneId.systemDefault()).toInstant())
+                .isDefault(Boolean.TRUE.equals(address.getIsDefault()))
+                .createdAt(address.getCreatedAt() == null ? null
+                        : address.getCreatedAt().atZone(ZoneId.systemDefault()).toInstant())
+                .updatedAt(address.getUpdatedAt() == null ? null
+                        : address.getUpdatedAt().atZone(ZoneId.systemDefault()).toInstant())
                 .build();
     }
 }
